fix: Prevent useless horizontal scroll

--- a/src/style/a.css
+++ b/src/style/a.css
@@ -19,6 +19,10 @@ img {
 	margin: 0 auto
 }
 
+input {
+	box-sizing: border-box;
+}
+
 .dn {
 	display: none
 }
@@ -45,7 +49,6 @@ img {
 }
 
 input[type=text] {
-	box-sizing: border-box;
 	font-size: 1rem;
 }
 
